# temp-mail

./: Cargo.toml  README.md
src/: colors.rs  lib.rs  main.rs
